    and used. Duplicated newlines will be removed on Windows. [Bug #5339] [Bug #11464]

* Net::HTTP
  * Add more HTTP status classes

  * Net::HTTP::STATUS_CODES is added as HTTP Status Code Repository [Misc #12935]

  * Net::HTTP#proxy_user and Net::HTTP#proxy_pass now reflects http_proxy
    environment variable if the system's environment variable is multiuser
    safe. [Bug #12921]

* RbConfig
  * New constants:
    * RbConfig::LIMITS is added to provide the limits of C types.

* Ripper
  * New method:
    * Ripper#state is added to tell the state of scanner. [Feature #13686]

  * New constants:
    * Ripper::EXPR_BEG and so on for Ripper#state.

* RDoc

  * Update RDoc 6.0.0.beta3.
    * Replaced IRB based lexer with Ripper. It much improves the speed of generating document.
    * https://github.com/ruby/rdoc/pull/512

* Rubygems

  * Update Rubygems 2.6.14.
    * http://blog.rubygems.org/2017/08/27/2.6.13-released.html
    * http://blog.rubygems.org/2017/10/09/unsafe-object-deserialization-vulnerability.html

* Set
  * Add Set#to_s as alias to #inspect [Feature #13676]
  * Add Set#=== as alias to #include? [Feature #13801]

* WEBrick

  * Add Server Name Indication (SNI) support [Feature #13729]

=== Compatibility issues (excluding feature bug fixes)

* BasicSocket#read_nonblock and BasicSocket#write_nonblock no
  longer sets the O_NONBLOCK file description flag as side effect
  (on Linux only) [Feature #13362]

* Net::HTTP
  * Net::HTTP#start now pass :ENV to p_addr by default. [Bug #13351]
    To avoid this, pass nil explicitly.

* Random.raw_seed renamed to become Random.urandom.  It is now
  applicable to non-seeding purposes due to [Bug #9569].

* Socket::Ifaddr#vhid is added [Feature #13803]

* ConditionVariable, Queue and SizedQueue reimplemented for speed.
  They no longer subclass Struct. [Feature #13552]

=== Stdlib compatibility issues (excluding feature bug fixes)

* mathn.rb
  Removed from stdlib. [Feature #10169]

* Rubygems